# Telco-customer-Churn

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run_pipeline.sh
models/: best_model.joblib  best_threshold.joblib  binary_mapping.joblib  business_value_summary.json  explainability_summary.json  model_cv_results.csv  model_summary.json  multiclass_encoder.joblib  numeric_scaler.joblib  profit_curve.csv  segment_recommendations.csv
notebooks/: 01_eda.ipynb  02_preprocessing_feature_engineering.ipynb  03_modeling.ipynb  04_explainability.ipynb  05_business_value.ipynb
src/: data_loader.py  explainability.py  feature_engineering.py  models.py  preprocessing.py
tests/: test_feature_engineering.py  test_preprocessing.py
